nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3        # Number of nginx pods to run
  selector:
    matchLabels:
      app: nginx     # Select pods with the label "app: nginx"
  template:
    metadata:
      labels:
        app: nginx   # Label applied to the pods in this deployment
    spec:
      containers:
        - name: nginx
          image: nginx:latest    # Docker image to use (latest version of nginx)
          ports:
            - containerPort: 80  # Port to expose on the nginx container
